--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,21 +1,6 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap");
-
-@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
-
 @font-face {
-  font-family: "argesta_displayregular";
-  src: url("/fonts/argesta/argestadisplay-regular-webfont.eot");
-  src: url("/fonts/argesta/argestadisplay-regular-webfont.eot?#iefix")
-      format("embedded-opentype"),
-    url("/fonts/argesta/argestadisplay-regular-webfont.woff2") format("woff2"),
-    url("/fonts/argesta/argestadisplay-regular-webfont.woff") format("woff"),
-    url("/fonts/argesta/argestadisplay-regular-webfont.ttf") format("truetype");
+  font-family: "Didot Regular";
+  src: url("/fonts/DidotRegular/font.ttf") format("ttf");
   font-weight: normal;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "KyivTypeSans-Regular-";
-  src: url("/fonts/KyivTypeSansRegular/font.woff2") format("woff2"),
-    url("/fonts/KyivTypeSansRegular/font.woff") format("woff");
+  font-style: normal; 
 }
