--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,12 +1,5 @@
 body {
-  // color: #30312f ;
-  // color: #dfd3c3;
-  // // mix-blend-mode: difference;
-  // background-color: #e4e2db;
-  // background-color: #171717;
-
-  font-family: SFUIDisplay, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Didot Regular";
 }
 
 .overflow {
@@ -20,9 +13,29 @@ body {
 .section {
   margin: 300px 0;
 }
-
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px;margin-top: 10px;
+  margin-left: 2em;
+  margin-right: 2em; 
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: minmax(250px, auto);
+  grid-gap: 40px;
+  
+}
+.images{
+  margin-top: 10px;
+  margin-left: 2em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: minmax(150px, auto);
+  grid-gap: 40px;
+}
 .nav-bar {
-  color: #dfd3c3;
+  color: #291700;
   position: fixed;
 
   top: 0;
@@ -44,6 +57,11 @@ body {
     display: flex;
     justify-content: space-between;
     text-align: center;
+  }
+  .nav-bar-img {
+    height: 10rem;
+    
+    // width: 100px; 
   }
 
   .nav-bar-right {
@@ -71,10 +89,11 @@ body {
   align-items: center;
   .home-loader-text {
     position: absolute;
-    width: 50vw;
-    font-size: 20vw;
-    font-weight: 800;
-    text-transform: lowercase;
+    width: 40vw;
+    font-size: 15vw;
+    font-family: 'Didot regular';
+    font-weight: 700;
+    text-transform: uppercase;
 
     display: flex;
     align-items: center;
@@ -99,4 +118,20 @@ body {
   &.as-visible {
     opacity: 1;
   }
+}
+
+@media (max-width: 368px) {
+.projects {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 5px;margin-top: 5px;
+  margin-left: 1em;
+  margin-right: 3em; 
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(20px, 1fr));
+  grid-auto-rows: minmax(50px, auto);
+  grid-gap: 10px;
+  
+}
 }
